Enthusiast spell corrected

--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
 	   			<p class="intro-position">
 	   				<span>Full-Stack Developer</span>
-	   				<span>AWS Enthusiastic</span> 
+	   				<span>AWS Enthusiast</span> 
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
