--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead">I am always open to learn new things. What I really experienced most of the times in my past career is that, all my mentors trusted and believed in me which gave me the freedom of exploring things, building logic, completing tasks and finally achieving goals in my way. This maybe was because they were always confident enough that I will be able to achieve the task which was entrusted on me. I look into things and I try my best to make it as simple as possible.</p>
    			</div>   			
 
    		</div>   		
